@@ -48,6 +48,7 @@ static DTEQ dteq[] = {
 //  { "3420",   "3420"  },
     { "3480",   "3420"  },
     { "3490",   "3420"  },
+    { "3590",   "3420"  },
     { "9347",   "3420"  },
     { "9348",   "3420"  },
     { "8809",   "3420"  },
